Feat(AUCTO-93):Pre-Order APIs (#26)
* Add create preorder API

* Add tests and docs

* Add docs
