# docs/swagger.json
@@ -519,6 +519,12 @@
                         "description": "Sort By a specific attribute of the product. Default is posted_date",
                         "name": "sort_by",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Get products by a specific product type, the types are 'Pre-Order' or 'Buy-Now'. Default is both will be selected",
+                        "name": "product_type",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1069,11 +1075,17 @@
                 "desc": {
                     "type": "string"
                 },
+                "discount": {
+                    "type": "integer"
+                },
                 "images": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/data.ProductImageData"
                     }
+                },
+                "order_by": {
+                    "type": "string"
                 },
                 "posted_date": {
                     "type": "string",
@@ -1089,6 +1101,9 @@
                     "type": "integer"
                 },
                 "product_type": {
+                    "type": "string"
+                },
+                "releases_on": {
                     "type": "string"
                 },
                 "seller_info": {
@@ -1182,6 +1197,12 @@
                 "desc": {
                     "type": "string"
                 },
+                "discount": {
+                    "type": "integer"
+                },
+                "order_by": {
+                    "type": "string"
+                },
                 "posted_date": {
                     "type": "string",
                     "example": "2023-08-03 02:50:26.034552906 +0000 UTC m=+192.307467936"
@@ -1196,6 +1217,9 @@
                     "type": "integer"
                 },
                 "product_type": {
+                    "type": "string"
+                },
+                "releases_on": {
                     "type": "string"
                 },
                 "seller_id": {
